# Chiplet_Heterogeneous_newVersion

./: .gitignore  .gitmodules  404.html  README.md  apply_patch.sh  index.html  patch.sh  setup_env.sh
01-quick-start/: index.html
02-benchmarks/: index.html
02-benchmarks/021-apis/: index.html
02-benchmarks/022-yaml/: index.html
03-sync-proto/: index.html
03-sync-proto/030-net-proto/: index.html
03-sync-proto/031-communication/: index.html
03-sync-proto/032-barrier/: index.html
03-sync-proto/033-lock/: index.html
03-sync-proto/034-launch/: index.html
03-sync-proto/035-cycle/: index.html
04-import-sim/: index.html
04-import-sim/041-snipersim/: index.html
04-import-sim/042-gpgpusim/: index.html
04-import-sim/043-gem5/: index.html
apiProject1/annotated/: index.html
apiProject1/apis__c_8cpp/: index.html
apiProject1/apis__c_8cpp_source/: index.html
apiProject1/apis__c_8h/: index.html
apiProject1/apis__c_8h_source/: index.html
apiProject1/apis__cu_8h/: index.html
apiProject1/apis__cu_8h_source/: index.html
apiProject1/benchmark__yaml_8h/: index.html
apiProject1/benchmark__yaml_8h_source/: index.html
apiProject1/classBenchmarkConfig/: index.html
apiProject1/classCmdLineOptions/: index.html
apiProject1/classInterChiplet_1_1BenchmarkConfig/: index.html
apiProject1/classInterChiplet_1_1CmdLineOptions/: index.html
apiProject1/classInterChiplet_1_1NetworkBenchItem/: index.html
apiProject1/classInterChiplet_1_1NetworkBenchList/: index.html
apiProject1/classInterChiplet_1_1NetworkDelayItem/: index.html
apiProject1/classInterChiplet_1_1NetworkDelayMap/: index.html
apiProject1/classInterChiplet_1_1NetworkDelayStruct/: index.html
apiProject1/classInterChiplet_1_1PipeComm/: index.html
apiProject1/classInterChiplet_1_1PipeCommUnit/: index.html
apiProject1/classInterChiplet_1_1ProcessConfig/: index.html
apiProject1/classInterChiplet_1_1SyncBarrierStruct/: index.html
apiProject1/classInterChiplet_1_1SyncClockStruct/: index.html
apiProject1/classInterChiplet_1_1SyncCommStruct/: index.html
apiProject1/classInterChiplet_1_1SyncCommand/: index.html
apiProject1/classInterChiplet_1_1SyncLaunchStruct/: index.html
apiProject1/classInterChiplet_1_1SyncLockStruct/: index.html
apiProject1/classInterChiplet_1_1SyncPipeStruct/: index.html
apiProject1/classNetworkBenchItem/: index.html
apiProject1/classNetworkBenchList/: index.html
apiProject1/classNetworkDelayItem/: index.html
apiProject1/classNetworkDelayMap/: index.html
apiProject1/classNetworkDelayStruct/: index.html
apiProject1/classProcessConfig/: index.html
apiProject1/classProcessStruct/: index.html
apiProject1/classSyncBarrierStruct/: index.html
apiProject1/classSyncClockStruct/: index.html
apiProject1/classSyncCommStruct/: index.html
apiProject1/classSyncLaunchStruct/: index.html
apiProject1/classSyncLockStruct/: index.html
apiProject1/classSyncPipeStruct/: index.html
apiProject1/classSyncStruct/: index.html
apiProject1/class_member_enums/: index.html
apiProject1/class_member_functions/: index.html
apiProject1/class_member_typedefs/: index.html
apiProject1/class_member_variables/: index.html
apiProject1/class_members/: index.html
apiProject1/classes/: index.html
apiProject1/cmd__handler_8cpp/: index.html
apiProject1/cmd__handler_8cpp_source/: index.html
apiProject1/cmd__handler_8h/: index.html
apiProject1/cmd__handler_8h_source/: index.html
apiProject1/cmdline__options_8h/: index.html
apiProject1/cmdline__options_8h_source/: index.html
apiProject1/dir_943fa6db2bfb09b7dcf1f02346dde40e/: index.html
apiProject1/dir_a2025b34133129e5724d121abe9a4a4a/: index.html
apiProject1/dir_b94c70d771af9f161858c2c4e7b3d1c5/: index.html
apiProject1/files/: index.html
apiProject1/functions/: index.html
apiProject1/global__define_8h/: index.html
apiProject1/global__define_8h_source/: index.html
apiProject1/group__apis__for__cpu/: index.html
apiProject1/group__apis__for__cuda/: index.html
apiProject1/group__benchmark__yaml/: index.html
apiProject1/group__cmd__handler__func/: index.html
apiProject1/group__cmd__handler__struct/: index.html
apiProject1/group__cmdline/: index.html
apiProject1/group__net__bench/: index.html
apiProject1/group__net__delay/: index.html
apiProject1/group__pipe__comm/: index.html
apiProject1/group__sync__proto/: index.html
apiProject1/hierarchy/: index.html
apiProject1/interchiplet_8cpp/: index.html
apiProject1/interchiplet_8cpp_source/: index.html
apiProject1/links/: index.html
apiProject1/macros/: index.html
apiProject1/modules/: index.html
apiProject1/namespaceInterChiplet/: index.html
benchmark/: .gitignore
benchmark/MLP/: makefile  (+6 more)
docs/: .gitignore  mkdocs.yml  requirements.txt
gpgpu-sim_distribution/: README.md  gpgpusim.config.bak
images/: Chiplet Simulator.drawio
interchiplet/: .gitignore  CMakeLists.txt
interchiplet/depreciate/: CMakeLists.txt  interchiplet_client.cpp  sniper_change.cpp  zmq_pro.cpp
interchiplet/includes/: apis_c.h  apis_cu.h  benchmark_yaml.h  cmd_handler.h  cmdline_options.h  global_define.h  interchiplet_app.h  interchiplet_client.h  intercomm.h  net_bench.h  net_delay.h  network_interface.h  pipe_comm.h  sniper_change.h  sync_protocol.h
interchiplet/patch/: gem5.diff  gpgpu-sim.diff  snipersim.diff
interchiplet/srcs/: apis_c.cpp  apis_cu.cu  cmd_handler.cpp  comm_bridge.cpp  interchiplet.cpp  interchiplet_app.cpp
popnet/: .gitignore  configuration.cc  configuration.h  flit.cc  flit.h  index.h  main.cc  mess_event.cc  mess_event.h  mess_queue.cc  mess_queue.h  sim_foundation.cc  sim_foundation.h  sim_router.cc  sim_router.h  sim_routing.cc
search/: search_index.json
sniper/: Makefile  build.sh  pin_rev_def.h  record_0.txt  run-sniper
sniper/changes/: CMakeLists.txt  interchiplet_client.h  record_transfer.cpp  sniper_change.h
(+367 files in other folders)
